--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Projet d'indexation web en lien avec le mot-clé rdvptrwjeiptwpes">
     <meta name="keywords" content="SEO, référencement, rdvptrwjeiptwpes, projet, indexation">
     <meta name="author" content="Youhanidhou SALEH">
+    <meta name="google-site-verification" content="gNUmUFpzCXIfIq8b0uUUSbdHiz0b0rxxFPsGcIG3W8I" />
     <title>Bienvenue sur rdvptrwjeiptwpes</title>
     <style>
         body {
