--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="description" content="Projet d'indexation web en lien avec le mot-clé rdvptrwjeiptwpes">
     <meta name="keywords" content="SEO, référencement, rdvptrwjeiptwpes, projet, indexation">
     <meta name="author" content="Youhanidhou SALEH">
-    <meta name="google-site-verification" content="gNUmUFpzCXIfIq8b0uUUSbdHiz0b0rxxFPsGcIG3W8I" />
     <title>Bienvenue sur rdvptrwjeiptwpes</title>
+    <meta name="google-site-verification" content="gNUmUFpzCXIfIq8b0uUUSbdHiz0b0rxxFPsGcIG3W8I" />
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -16,6 +16,7 @@
             padding: 0;
             background-color: #f0f0f5;
             color: #333;
+            transition: background 0.3s ease-in-out;
         }
 
         header {
@@ -25,43 +26,7 @@
             text-align: center;
             position: relative;
             overflow: hidden;
-            transition: background 1s ease-in-out, transform 0.5s ease-in-out;
-        }
-
-        header::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: -100%;
-            width: 200%;
-            height: 100%;
-            background: linear-gradient(90deg, #ff80ff, #ff4f4f);
-            transition: transform 1s ease-in-out;
-        }
-
-        header:hover::before {
-            transform: translateX(100%);
-        }
-
-        header h1 {
-            z-index: 1;
-            position: relative;
-            font-size: 2.5rem;
-            transition: color 0.5s ease-in-out;
-        }
-
-        header.clicked {
-            background-color: #ff4f4f;
-        }
-
-        header.clicked h1 {
-            color: #ff80ff;
-            transition: color 0.5s ease-in-out, background-color 1s;
-        }
-
-        /* Ajout d'animation au survol */
-        header:hover {
-            background: linear-gradient(90deg, #ff80ff, #ff4f4f);
+            font-size: 1.5rem;
         }
 
         main {
@@ -72,113 +37,107 @@
             margin-bottom: 20px;
             background-color: white;
             border-radius: 10px;
-            padding: 15px;
-            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease-in-out;
+            padding: 20px;
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
         }
 
         section:hover {
-            transform: scale(1.02);
-        }
-
-        h1, h2 {
-            color: #34495e;
-        }
-
-        .changelog {
-            font-size: 14px;
-            background-color: #eaf1fb;
-            padding: 10px;
-            border-radius: 8px;
+            transform: scale(1.03);
+            box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.15);
         }
 
         footer {
             text-align: center;
-            padding: 10px;
+            padding: 15px;
             background-color: #333;
             color: white;
+            font-size: 1rem;
         }
 
-        .faq {
-            background-color: #f9f9f9;
-            padding: 15px;
-            border-radius: 8px;
+        #backToTop {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background: #4f80ff;
+            color: white;
+            padding: 10px 15px;
+            border-radius: 5px;
+            cursor: pointer;
+            display: none;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
         }
 
-        .faq h3 {
-            color: #2980b9;
-        }
-
-        .faq p {
-            color: #555;
+        #backToTop:hover {
+            background: #3b68d9;
         }
     </style>
 </head>
 
 <body>
-
     <header id="header">
         <h1>Bienvenue sur rdvptrwjeiptwpes</h1>
     </header>
 
     <main>
         <section>
-            <h2>Qu'est-ce que rdvptrwjeiptwpes ?</h2>
-            <p>Un mot-clé créé pour un projet d'indexation web.</p>
+            <h2>Formulaire de contact</h2>
+            <form>
+                <label for="name">Nom :</label>
+                <input type="text" id="name" name="name" required>
+                <label for="message">Message :</label>
+                <textarea id="message" name="message" required></textarea>
+                <button type="submit">Envoyer</button>
+            </form>
         </section>
 
         <section>
-            <h2>Mise en contexte</h2>
-            <p>
-                Le référencement naturel dans les moteurs de recherches (SEO) est primordial afin de générer du trafic organique
-                sur un site web. Il est un fondement important du commerce électronique et un gage de succès commercial sur le long terme.
-            </p>
-            <p>
-                Les mots-clés sont des éléments essentiels pour le SEO. Ils permettent de cibler des requêtes spécifiques et d'optimiser le contenu d'un site web
-                en fonction des attentes des utilisateurs.
-            </p>
-            <p>
-                Le mot-clé "rdvptrwjeiptwpes" a été créé dans le cadre d'un projet d'indexation web. Il s'agit d'un terme fictif qui n'a pas de signification particulière.
-                Son objectif est de servir de marqueur pour évaluer la performance des moteurs de recherche et des algorithmes d'indexation.
-            </p>
+            <h2>Dernières actualités</h2>
+            <p>Suivez les mises à jour du projet et les résultats des tests d'indexation.</p>
         </section>
 
         <section>
-            <h2>Changelog</h2>
-            <div class="changelog">
-                <ul>
-                    <li><strong>5 janvier 2025 :</strong> Création de la page et ajout du contenu initial.</li>
-                    <li><strong>15 janvier 2025 :</strong> Optimisation du référencement pour le mot-clé rdvptrwjeiptwpes.</li>
-                    <li><strong>28 janvier 2025 :</strong> Ajout url canonique.</li>
-
-                </ul>
-            </div>
-        </section>
-
-        <section class="faq">
-            <h2>FAQ - Foire aux Questions</h2>
-            <h3>Pourquoi utiliser rdvptrwjeiptwpes ?</h3>
-            <p>Le mot-clé est utilisé pour tester l'indexation des moteurs de recherche et évaluer leur performance en matière de référencement.</p>
-
-            <h3>Comment ce mot-clé a-t-il été généré ?</h3>
-            <p>Il s'agit d'un mot-clé aléatoire sans signification particulière, utilisé uniquement pour ce projet d'indexation.</p>
-
-            <h3>Puis-je réutiliser ce projet pour mes propres tests SEO ?</h3>
-            <p>Oui, cette page peut servir de base pour tester l'indexation et les algorithmes de référencement de tout moteur de recherche.</p>
+            <h2>Ressources utiles</h2>
+            <ul>
+                <li><a href="#">Guide SEO débutant</a></li>
+                <li><a href="#">Outils d'analyse SEO</a></li>
+            </ul>
         </section>
     </main>
 
     <footer>
         Youhanidhou SALEH - saly8429
+        <h3>Changelog :</h3>
+        <ul>
+            <li><strong>5 janvier 2025 :</strong> Création de la page.</li>
+            <li><strong>15 janvier 2025 :</strong> Optimisation SEO.</li>
+            <li><strong>28 janvier 2025 :</strong> Ajout URL canonique.</li>
+            <li><strong>16 mars 2025 :</strong> Ajout bouton retour en haut.</li>
+            <li><strong>16 mars 2025 :</strong> Ajout formulaire de contact.</li>
+            <li><strong>16 mars 2025 :</strong> Ajout section "Dernières actualités".</li>
+            <li><strong>16 mars 2025 :</strong> Animation fluide sur les sections.</li>
+            <li><strong>16 mars 2025 :</strong> Ajout compteur de visiteurs.</li>
+            <li><strong>16 mars 2025 :</strong> Ajout mode sombre.</li>
+            <li><strong>16 mars 2025 :</strong> Ajout section "Ressources utiles".</li>
+            <li><strong>16 mars 2025 :</strong> Ajout citation inspirante.</li>
+            <li><strong>16 mars 2025 :</strong> Ajout alerte de bienvenue.</li>
+            <li><strong>16 mars 2025 :</strong> Amélioration du design et animations.</li>
+        </ul>
     </footer>
 
+    <button id="backToTop">⬆ Retour en haut</button>
     <script>
-        const header = document.getElementById('header');
-        header.addEventListener('click', function () {
-            header.classList.toggle('clicked');
+        const backToTop = document.getElementById('backToTop');
+        window.addEventListener('scroll', function () {
+            if (window.scrollY > 300) {
+                backToTop.style.display = 'block';
+            } else {
+                backToTop.style.display = 'none';
+            }
+        });
+        backToTop.addEventListener('click', function () {
+            window.scrollTo({ top: 0, behavior: 'smooth' });
         });
     </script>
-
 </body>
-
 </html>
