--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta name="author" content="Youhanidhou SALEH">
     <title>Bienvenue sur rdvptrwjeiptwpes</title>
     <meta name="google-site-verification" content="gNUmUFpzCXIfIq8b0uUUSbdHiz0b0rxxFPsGcIG3W8I" />
+
+
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -104,6 +106,92 @@
         form button:hover {
             background-color: #3b68d9;
         }
+
+        .three-section-container {
+            display: flex;
+            justify-content: space-between;
+            gap: 20px;
+            margin: 40px 0;
+        }
+
+        .three-section {
+            flex: 1;
+            padding: 20px;
+            border-radius: 10px;
+            color: white;
+            text-align: center;
+            font-size: 1.2rem;
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease-in-out;
+        }
+
+        .three-section:hover {
+            transform: scale(1.05);
+            
+        }
+
+        .three-section:nth-child(1) {
+            background-color: #f793e6;
+        }
+
+        .three-section:nth-child(2) {
+            background-color: #4682b4;
+        }
+
+        .three-section:nth-child(3) {
+            background-color: #32cd32;
+        }
+
+
+        .animation-section {
+            text-align: center;
+            margin: 50px 0;
+            padding: 40px;
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .animated-container {
+            display: flex;
+            justify-content: center;
+            gap: 30px;
+        }
+
+        .animated-box, .animated-circle, .animated-star {
+            width: 100px;
+            height: 100px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 1.5rem;
+            color: white;
+            animation: bounce 2s infinite;
+        }
+
+        .animated-box {
+            background-color: #ff5733;
+        }
+
+        .animated-circle {
+            background-color: #3498db;
+            border-radius: 50%;
+        }
+
+        .animated-star {
+            background-color: #f1c40f;
+            clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+        }
+
+        @keyframes bounce {
+            0%, 100% {
+                transform: translateY(0);
+            }
+            50% {
+                transform: translateY(-20px);
+            }
+        }
+
 
         .social-icons {
             text-align: center;
@@ -204,6 +292,32 @@
                 <li>Création de contenu de qualité et structuration efficace des pages.</li>
             </ul>
         </section>
+
+        <section class="three-section-container">
+            <div class="three-section">
+                <h3>Présentation</h3>
+                <p>Découvrez notre projet et ses objectifs clés pour améliorer le référencement.</p>
+            </div>
+            <div class="three-section">
+                <h3>Technologies</h3>
+                <p>Les outils et techniques utilisés pour optimiser notre présence en ligne.</p>
+            </div>
+            <div class="three-section">
+                <h3>Impact</h3>
+                <p>Les résultats obtenus et comment nous visons à évoluer davantage.</p>
+            </div>
+        </section>
+
+        <section class="animation-section">
+            <h2>Animations Dynamiques</h2>
+            <p>Explorez les effets visuels interactifs qui rendent notre site plus engageant.</p>
+            <div class="animated-container">
+                <div class="animated-box">■</div>
+                <div class="animated-circle">●</div>
+                <div class="animated-star">★</div>
+            </div>
+        </section>
+
     </main>
 
     <div class="social-icons">
@@ -226,6 +340,9 @@
             <li><strong>16 mars 2025 :</strong> Ajout section à trois sous-sections avec couleurs et interactions.</li>
             <li><strong>16 mars 2025 :</strong> Ajout section  Réseaux sociaux.</li>
             <li><strong>16 mars 2025 :</strong> Amélioration du design et animations.</li>
+            <li><strong>17 mars 2025 :</strong> Ajout section  Présentation -Technologies- Impact.</li>
+            <li><strong>17 mars 2025 :</strong> Ajout section  Animations Dynamiques.</li>
+            <li><strong>17 mars 2025 :</strong> Ajout  de Trois animations distinctes.</li>
         </ul>
     </footer>
 </body>
